--- a/CheckIn/CheckIn/en.lproj/MainStoryboard.storyboard
+++ b/CheckIn/CheckIn/en.lproj/MainStoryboard.storyboard
@@ -1,32 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="7QM-Mg-0zE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="sWd-xW-xfa">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--Tab Bar Controller-->
-        <scene sceneID="lc5-Ly-IvK">
-            <objects>
-                <tabBarController definesPresentationContext="YES" id="7QM-Mg-0zE" sceneMemberID="viewController">
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="HJD-zR-bZ0">
-                        <rect key="frame" x="129" y="330" width="163" height="49"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="sWd-xW-xfa" kind="relationship" relationship="viewControllers" id="VS8-qG-UzO"/>
-                        <segue destination="fDZ-fP-TS7" kind="relationship" relationship="viewControllers" id="Osb-In-37r"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Bq5-hN-sU4" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-201" y="-3771"/>
-        </scene>
         <!--Navigation Controller - 记录-->
         <scene sceneID="GeH-vW-kJ0">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="IXD-h8-aji" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="sWd-xW-xfa" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="记录" id="hy4-5R-j8g"/>
                     <toolbarItems/>
@@ -39,68 +19,65 @@
                         <segue destination="idW-ji-Lim" kind="relationship" relationship="rootViewController" id="Ras-Ia-l72"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IXD-h8-aji" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="360" y="-3989"/>
+            <point key="canvasLocation" x="-176" y="-3995"/>
         </scene>
         <!--View Controller - checkin-->
         <scene sceneID="oUY-8U-pFW">
             <objects>
-                <viewController id="fDZ-fP-TS7" customClass="CIViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CIViewController" id="fDZ-fP-TS7" customClass="CIViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="c9E-J5-KyM">
-                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kcx-fU-7IX">
+                            <searchBar contentMode="redraw" placeholder="搜索地名" translatesAutoresizingMaskIntoConstraints="NO" id="fIt-pT-1pC">
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="COg-6a-bUD">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="216" id="dnG-ds-z5u"/>
+                                    <constraint firstAttribute="height" constant="500" id="gxh-zg-J9E"/>
                                 </constraints>
-                            </pickerView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rYf-3R-NB9">
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="selectButton:" destination="fDZ-fP-TS7" eventType="touchUpInside" id="Scr-4p-lRR"/>
-                                </connections>
-                            </button>
+                                <mapView key="tableFooterView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" id="BL2-Tg-384">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="160"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                </mapView>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="rYf-3R-NB9" firstAttribute="centerX" secondItem="Kcx-fU-7IX" secondAttribute="centerX" type="default" id="3Ab-4v-mRp"/>
-                            <constraint firstItem="Kcx-fU-7IX" firstAttribute="trailing" secondItem="c9E-J5-KyM" secondAttribute="trailing" type="default" id="FrQ-JX-W1y"/>
-                            <constraint firstAttribute="bottom" secondItem="rYf-3R-NB9" secondAttribute="bottom" constant="11" id="NZt-0c-0Fw"/>
-                            <constraint firstItem="Kcx-fU-7IX" firstAttribute="leading" secondItem="c9E-J5-KyM" secondAttribute="leading" type="default" id="SPK-an-3vF"/>
-                            <constraint firstItem="Kcx-fU-7IX" firstAttribute="top" secondItem="c9E-J5-KyM" secondAttribute="top" type="default" id="wMN-Hn-om3"/>
+                            <constraint firstItem="COg-6a-bUD" firstAttribute="trailing" secondItem="c9E-J5-KyM" secondAttribute="trailing" type="default" id="2ki-mT-NzO"/>
+                            <constraint firstItem="COg-6a-bUD" firstAttribute="leading" secondItem="c9E-J5-KyM" secondAttribute="leading" type="default" id="3aK-a6-zRN"/>
+                            <constraint firstItem="fIt-pT-1pC" firstAttribute="trailing" secondItem="c9E-J5-KyM" secondAttribute="trailing" type="default" id="ZDh-2Y-RDZ"/>
+                            <constraint firstItem="fIt-pT-1pC" firstAttribute="leading" secondItem="c9E-J5-KyM" secondAttribute="leading" type="default" id="awS-gq-Kdi"/>
+                            <constraint firstItem="COg-6a-bUD" firstAttribute="top" secondItem="c9E-J5-KyM" secondAttribute="top" constant="40" id="k8L-Gh-6r2"/>
+                            <constraint firstItem="fIt-pT-1pC" firstAttribute="top" secondItem="c9E-J5-KyM" secondAttribute="top" constant="-1" id="lvN-9Q-Po5"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="checkin" id="pbX-Q6-xj9"/>
                     <connections>
-                        <outlet property="pickView" destination="Kcx-fU-7IX" id="Gtx-Tk-e1z"/>
+                        <outlet property="mapView" destination="BL2-Tg-384" id="HYp-SU-Uwj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gOf-Lu-b5w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="367" y="-3396"/>
+            <point key="canvasLocation" x="-176" y="-3406"/>
         </scene>
         <!--Feed View Controller-->
         <scene sceneID="WwK-yt-hKP">
             <objects>
                 <tableViewController id="idW-ji-Lim" customClass="CIFeedViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="DHx-VW-P4P">
-                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="194" sectionHeaderHeight="22" sectionFooterHeight="22" id="DHx-VW-P4P">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CheckInCell" textLabel="esC-tm-s90" detailTextLabel="rmI-R0-Koj" style="IBUITableViewCellStyleSubtitle" id="tjG-U0-4Rp">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="22" width="320" height="194"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="193"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="esC-tm-s90">
@@ -130,7 +107,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ra4-CB-0PN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="944" y="-3995"/>
+            <point key="canvasLocation" x="218" y="-3995"/>
         </scene>
     </scenes>
     <classes>
@@ -143,8 +120,9 @@
         <class className="CIViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CIViewController.h"/>
             <relationships>
-                <relationship kind="action" name="selectButton:"/>
-                <relationship kind="outlet" name="pickView" candidateClass="UIPickerView"/>
+                <relationship kind="action" name="searchPlace:"/>
+                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
             </relationships>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
