--- a/CheckIn/CheckIn/en.lproj/MainStoryboard.storyboard
+++ b/CheckIn/CheckIn/en.lproj/MainStoryboard.storyboard
@@ -28,66 +28,25 @@
             <objects>
                 <viewController storyboardIdentifier="CIViewController" id="fDZ-fP-TS7" customClass="CIViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="c9E-J5-KyM">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" placeholder="搜索地名" translatesAutoresizingMaskIntoConstraints="NO" id="fIt-pT-1pC">
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="COg-6a-bUD">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="COg-6a-bUD">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="500" id="gxh-zg-J9E"/>
                                 </constraints>
-                                <mapView key="tableHeaderView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" id="BL2-Tg-384">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="160"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                </mapView>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="gis-f5-G38">
-                                        <rect key="frame" x="0.0" y="182" width="320" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                    </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="3Dv-A2-Rae">
-                                        <rect key="frame" x="0.0" y="226" width="320" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                    </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="wdi-4E-twl">
-                                        <rect key="frame" x="0.0" y="270" width="320" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                    </tableViewCell>
-                                </prototypes>
-                                <sections/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="COg-6a-bUD" firstAttribute="trailing" secondItem="c9E-J5-KyM" secondAttribute="trailing" type="default" id="2ki-mT-NzO"/>
-                            <constraint firstItem="COg-6a-bUD" firstAttribute="leading" secondItem="c9E-J5-KyM" secondAttribute="leading" type="default" id="3aK-a6-zRN"/>
-                            <constraint firstItem="fIt-pT-1pC" firstAttribute="trailing" secondItem="c9E-J5-KyM" secondAttribute="trailing" type="default" id="ZDh-2Y-RDZ"/>
-                            <constraint firstItem="fIt-pT-1pC" firstAttribute="leading" secondItem="c9E-J5-KyM" secondAttribute="leading" type="default" id="awS-gq-Kdi"/>
-                            <constraint firstItem="COg-6a-bUD" firstAttribute="top" secondItem="c9E-J5-KyM" secondAttribute="top" constant="40" id="k8L-Gh-6r2"/>
-                            <constraint firstItem="fIt-pT-1pC" firstAttribute="top" secondItem="c9E-J5-KyM" secondAttribute="top" constant="-1" id="lvN-9Q-Po5"/>
+                            <constraint firstItem="COg-6a-bUD" firstAttribute="top" secondItem="c9E-J5-KyM" secondAttribute="top" type="default" id="MST-6d-ZZq"/>
+                            <constraint firstItem="COg-6a-bUD" firstAttribute="trailing" secondItem="c9E-J5-KyM" secondAttribute="trailing" type="default" id="Xqw-UC-b66"/>
+                            <constraint firstItem="COg-6a-bUD" firstAttribute="leading" secondItem="c9E-J5-KyM" secondAttribute="leading" type="default" id="ZKI-7F-Tvi"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="checkin" id="pbX-Q6-xj9"/>
                     <connections>
-                        <outlet property="mapView" destination="BL2-Tg-384" id="HYp-SU-Uwj"/>
                         <outlet property="tableView" destination="COg-6a-bUD" id="DlM-2k-ema"/>
                     </connections>
                 </viewController>
@@ -95,37 +54,47 @@
             </objects>
             <point key="canvasLocation" x="-176" y="-3406"/>
         </scene>
+        <!--Feeling View Controller-->
+        <scene sceneID="izs-dS-Rnn">
+            <objects>
+                <viewController storyboardIdentifier="CIFeelingViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="2X1-Zu-piy" customClass="CIFeelingViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6GA-pX-LVA">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="说点什么..." translatesAutoresizingMaskIntoConstraints="NO" id="UTM-t5-fdM">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="460" id="4Ut-2v-1sr"/>
+                                </constraints>
+                                <color key="textColor" red="0.32450645850746501" green="0.33040729162383875" blue="0.34037449048913049" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UTM-t5-fdM" firstAttribute="trailing" secondItem="6GA-pX-LVA" secondAttribute="trailing" type="default" id="Jfx-CF-jfh"/>
+                            <constraint firstItem="UTM-t5-fdM" firstAttribute="leading" secondItem="6GA-pX-LVA" secondAttribute="leading" type="default" id="Ooh-vP-kuh"/>
+                            <constraint firstItem="UTM-t5-fdM" firstAttribute="top" secondItem="6GA-pX-LVA" secondAttribute="top" type="default" id="VUC-3s-mxJ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="feelingView" destination="UTM-t5-fdM" id="HRN-Pl-dq3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OBz-B2-uqu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="218" y="-3402"/>
+        </scene>
         <!--Feed View Controller-->
         <scene sceneID="WwK-yt-hKP">
             <objects>
-                <tableViewController id="idW-ji-Lim" customClass="CIFeedViewController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="CIFeedViewController" id="idW-ji-Lim" customClass="CIFeedViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="194" sectionHeaderHeight="22" sectionFooterHeight="22" id="DHx-VW-P4P">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CheckInCell" textLabel="esC-tm-s90" detailTextLabel="rmI-R0-Koj" style="IBUITableViewCellStyleSubtitle" id="tjG-U0-4Rp">
-                                <rect key="frame" x="0.0" y="22" width="320" height="194"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="193"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="esC-tm-s90">
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        </label>
-                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rmI-R0-Koj">
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
-                                            <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        </label>
-                                    </subviews>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                            </tableViewCell>
-                        </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="idW-ji-Lim" id="SwK-oD-LFM"/>
                             <outlet property="delegate" destination="idW-ji-Lim" id="yCb-p8-XCX"/>
@@ -141,27 +110,9 @@
             <point key="canvasLocation" x="218" y="-3995"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="CIFeedViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CIFeedViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="CIViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CIViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
 </document>
